--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         let ir = await audioContext.decodeAudioData(arraybuffer)
 
         //create and return AudioNode for reverb effect.
-        return new ConvolverNode(audioContext, {buffer: ir};
+        return new ConvolverNode(audioContext, {buffer: ir});
 }
 
 // Usage
